feat: add database initialization scripts for Render
- Created run-migrations.js for Node-based SQL migrations
- Created init-database.sh for one-time database setup
- Added npm run db:init command (runs migrations + seeds)
- Handles 'table already exists' errors gracefully
- Ready to run on Render Shell

--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "stripe:seed": "ts-node ./scripts/seed-stripe.ts",
     "seed:templates": "ts-node ./scripts/seed-templates.ts",
-    "migrate": "for f in migrations/*.sql; do echo \"Running $f...\"; psql $DATABASE_URL -f \"$f\"; done"
+    "migrate": "node ./scripts/run-migrations.js",
+    "db:init": "npm run migrate && npm run seed:templates"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
